--- a/dream-fronend/dream-angular/package.json
+++ b/dream-fronend/dream-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dream-store",
+  "name": "dream-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:dream-store": "node dist/dream-store/server/server.mjs"
+    "serve:ssr:dream-angular": "node dist/dream-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
+    "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
